HDDS-10121. Fixed review comments.